feat: add image upload functionality to edit profile and update user image display

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "app/index.jsx",
-    "context/authContext.jsx"
+    "app/index.tsx",
+    "context/authContext.tsx",
+    "components/Avatar.jsx",
+    "components/BackButton.jsx",
+    "components/Button.jsx"
   ]
 }
