--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@react-navigation/native": "^7.0.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.49.1",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~52.0.20",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "~18.0.11",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
@@ -43,8 +47,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-image": "~2.0.6"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
