--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.6",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.14",
     "expo-splash-screen": "~0.29.18",
@@ -53,8 +54,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.12.5",
-    "expo-linear-gradient": "~14.0.2"
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -62,6 +62,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1"
   },
   "private": true
