--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "18.3.1"
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
